# backend/src/db/schema/attachments.ts
@@ -1,8 +1,6 @@
 import { boolean, pgTable, varchar } from 'drizzle-orm/pg-core';
 import { attachmentEntityColumns, attachmentEntityIndexes } from '#/attachment-config';
-import { usersTable } from '#/db/schema/users';
-import { timestampColumns } from '#/db/utils/timestamp-columns';
-import { nanoid } from '#/utils/nanoid';
+import { productEntityColumns } from '#/db/utils/product-entity-columns';
 
 /**
  * Attachments table to store file metadata and relations.
@@ -10,15 +8,7 @@ import { nanoid } from '#/utils/nanoid';
 export const attachmentsTable = pgTable(
   'attachments',
   {
-    // Base columns
-    createdAt: timestampColumns.createdAt,
-    id: varchar().primaryKey().$defaultFn(nanoid),
-    entityType: varchar({ enum: ['attachment'] })
-      .notNull()
-      .default('attachment'),
-    name: varchar().notNull().default('New attachment'),
-    description: varchar(),
-    //TODO add keywords column?
+    ...productEntityColumns('attachment'),
     // Specific columns
     public: boolean().notNull().default(false),
     bucketName: varchar().notNull(),
@@ -30,13 +20,6 @@ export const attachmentsTable = pgTable(
     originalKey: varchar().notNull(),
     convertedKey: varchar(),
     thumbnailKey: varchar(),
-    createdBy: varchar().references(() => usersTable.id, {
-      onDelete: 'set null',
-    }),
-    modifiedAt: timestampColumns.modifiedAt,
-    modifiedBy: varchar().references(() => usersTable.id, {
-      onDelete: 'set null',
-    }),
     ...attachmentEntityColumns,
   },
   (table) => [...attachmentEntityIndexes(table)],
