# backend/src/db/schema/pages.ts
@@ -1,7 +1,5 @@
-import { AnyPgColumn, doublePrecision, pgTable, unique, varchar } from 'drizzle-orm/pg-core';
-import { usersTable } from '#/db/schema/users';
-import { timestampColumns } from '#/db/utils/timestamp-columns';
-import { nanoid } from '#/utils/nanoid';
+import { type AnyPgColumn, doublePrecision, pgTable, unique, varchar } from 'drizzle-orm/pg-core';
+import { productEntityColumns } from '#/db/utils/product-entity-columns';
 
 const pageStatusEnum = ['unpublished', 'published', 'archived'] as const;
 
@@ -11,30 +9,13 @@ const pageStatusEnum = ['unpublished', 'published', 'archived'] as const;
 export const pagesTable = pgTable(
   'pages',
   {
-    // Base columns
-    createdAt: timestampColumns.createdAt,
-    id: varchar().primaryKey().$defaultFn(nanoid),
-    entityType: varchar({ enum: ['page'] })
-      .notNull()
-      .default('page'),
-    name: varchar().notNull().default('New page'),
-    description: varchar().notNull(),
-    keywords: varchar().notNull(),
+    ...productEntityColumns('page'),
     // Specific columns
     status: varchar({ enum: pageStatusEnum }).notNull().default('unpublished'),
     parentId: varchar().references((): AnyPgColumn => pagesTable.id, {
       onDelete: 'set null',
     }),
     displayOrder: doublePrecision().notNull(),
-    createdBy: varchar()
-      .notNull()
-      .references(() => usersTable.id, {
-        onDelete: 'set null',
-      }),
-    modifiedAt: timestampColumns.modifiedAt,
-    modifiedBy: varchar().references(() => usersTable.id, {
-      onDelete: 'set null',
-    }),
   },
   (table) => [unique('group_order').on(table.parentId, table.displayOrder)],
 );
